add floder for dev

--- a/firefighting-cloud/config-dev/application-common.yml
+++ b/firefighting-cloud/config-dev/application-common.yml
@@ -1,4 +1,13 @@
 foo:
   hello config-dev
 
-
+spring:
+    rabbitmq:
+        username: superrd
+        password: superrd
+        host: 192.168.11.120  #rabbitMQ实际IP地址
+        port: 5672            #rabbitMQ实际端口
+    cloud:
+        bus:
+            trace:
+                enabled: true   # 开启追踪
