add floder for dev

--- a/firefighting-cloud/config-dev/application-common.yml
+++ b/firefighting-cloud/config-dev/application-common.yml
@@ -11,3 +11,10 @@ spring:
         bus:
             trace:
                 enabled: true   # 开启追踪
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
