--- a/firefighting-cloud/config-dev/application-common.yml
+++ b/firefighting-cloud/config-dev/application-common.yml
@@ -5,16 +5,16 @@ spring:
     rabbitmq:
         username: superrd
         password: superrd
-        host: 192.168.48.128  #rabbitMQ实际IP地址
+        host: 192.168.11.120  #rabbitMQ实际IP地址
         port: 5672            #rabbitMQ实际端口
     cloud:
         bus:
             trace:
                 enabled: true   # 开启追踪
-
-
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+server:
+    port: 8080
